2011-10-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLProtocol.m:
	* Source/NSURLConnection.m:
	Ensure that a synchronous load returns the response.
	* Tests/base/NSURLConnection/basic.m: add test for above change.

2011-10-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSURL.h: Document that methods creating file URLs
	raise an exception on being given a nil argument.
	* Source/NSURL.m: Make file URL initialisers raise on nil argument.
	* Source/NSBundle.m: Fix to check for nil path when reating file
	URLs (fix for bug #34468).

2011-10-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPropertyList.m (GSBinaryPLParser -objectAtIndex:): Use
	long long for all integer types. Before we used signed types which
	resulted wrong values for negative integers.
	* Source/NSKeyedUnarchiver.m (-_decodeObject:): Handle the string
	"$null" as nil all the times.

2011-10-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSHost.m: Update to use inet_pton() and inet_ntop() and to
	understand IPV6 addresses.
	* Source/GSNetwork.h: New private functions to work with the internals
	of a sockaddr irrespective of whether it's IP v4 or v6
	* Source/GSSocketStream.h: Move a declaration to GSNetwork.h
	* Source/GSSocketStream.m: Use new functions.
	* Source/NSSocketPort.m: Change to be IP v4/v6 agnostic
	* Source/NSMessagePort.m: Fix header include order.
	* Source/GSFileHandle.m: Changes to be IP v4/v6 agnostic
	* Headers/GNUstepBase/GSFileHandle.h: make setter use sockaddr type
	rather than sockaddr_in so we can use it for ipv6

2011-10-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSData.m (-initWithCoder:, -encodeWithCoder): Correct
	keyed encoding/decoding.

2011-10-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSFileManager.h
	* Source/NSFileManager.m
	* Tests/base/NSFileManager/general.m
	* Headers/Foundation/NSUserDefaults.h
	* Source/NSUserDefaults.m
	* Tests/base/NSUserDefaults/basic.m